--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,13 @@
-           <!-- Footer -->
-           <footer class="sticky-footer bg-white">
+</div>
+<!-- /.container-fluid -->
+
+</div>
+<!-- End of Main Content -->
+          <!-- Footer -->
+           <footer style="" class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Your Website 2020</span>
+                    <span>Website quản lý cửa hàng mỹ phẩm</span>
                 </div>
             </div>
         </footer>
@@ -49,6 +54,26 @@
 <!-- Custom scripts for all pages-->
 <script src="/js/sb-admin-2.min.js"></script>
 <script>
+    $(document).ready(() => {
+        $('.delete-product').on('click', (e) => {
+            var r = confirm('Bạn có muốn xóa sản phẩm này không ? ');
+            if(r){
+                const id = e.target.dataset.id;
+                $.ajax({
+                    type: 'DELETE',
+                    url: "/product/delete/" + id,
+                    success: function (response) {
+                        
+                        window.location.reload()
+                    },
+                    error: function (err){
+                        console.log(err)
+                    }
+                })
+            }
+            
+        })
+    })
     function addVolume(){
 
         $('#first-volume .clone-volume').clone().find('input').val("").end().appendTo("#dynamic-volume");
