--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -72,7 +72,7 @@
               <button class="btn btn-success px-5" type="submit">Login</button>
             </div>
             <div class="form-group">
-              <p>Don't have any account? <a href="#">Register now!</a></p>
+              <p>Don't have any account? <a href="/user/register">Register now!</a></p>
             </div>
           </form>
         </div>
