--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -100,7 +100,7 @@
               <button class="btn btn-success px-5" type="submit">Register</button>
             </div>
             <div class="form-group">
-              <p>Already have an account? <a href="#">Login now!</a></p>
+              <p>Already have an account? <a href="/user/login">Login now!</a></p>
             </div>
           </form>
         </div>
