--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -57,6 +57,11 @@
                   <i class="fa fa-list"></i>
                   <span>Quản lý thành viên</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/pakage">
+                    <i class="fa fa-list"></i>
+                    <span>Quản lý lô nhập</span></a>
+              </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -88,7 +93,7 @@
                     <form
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                            <input type="text" class="form-control bg-light border-0 small" onkeyup="searchResult(this.value)" placeholder="Search for..."
                                 aria-label="Search" aria-describedby="basic-addon2">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="button">
@@ -280,3 +285,17 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
+                    <table id="result-table" class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">Hình ảnh</th>
+                            <th scope="col">ID sản phẩm</th>
+                            <th scope="col">Tên sản phẩm</th>
+                            <th scope="col">Dung tích</th>
+                            <th scope="col">Đơn vị dung tích</th>
+                          </tr>
+                        </thead>
+                        <tbody id="body-table">
+                        
+                        </tbody>
+                      </table>
