Update nguoi dung

--- a/src/views/editProduct.ejs
+++ b/src/views/editProduct.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header');%>
-<form method="POST" action="/product/edit">
+<form method="POST" action="/user/edit">
   <div class="form-group">
     <label for="user">ID sản phẩm</label>
     <input
