--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -74,7 +74,26 @@
             
         })
 
-        ///
+        ///delete user
+        $('.delete-user').on('click', (e) => {
+            var r = confirm('Bạn có muốn xóa người dùng này không ? ');
+            if(r){
+                const id = e.target.dataset.id;
+                console.log('id',id)
+                $.ajax({
+                    type: 'DELETE',
+                    url: "/user/delete/" + id,
+                    success: function (response) {
+                        
+                        window.location.reload()
+                    },
+                    error: function (err){
+                        console.log(err)
+                    }
+                })
+            }
+            
+        })
     })
     function addVolume(){
 
