--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -20,6 +20,7 @@
     <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet">
 
+
 </head>
 
 <body id="page-top">
@@ -58,7 +59,7 @@
                   <span>Quản lý thành viên</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pakage">
+                <a class="nav-link" href="/package">
                     <i class="fa fa-list"></i>
                     <span>Quản lý lô nhập</span></a>
               </li>
