--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -4,7 +4,7 @@
 </div>
 <!-- End of Main Content -->
           <!-- Footer -->
-           <footer style="" class="sticky-footer bg-white">
+           <footer class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
                     <span>Website quản lý cửa hàng mỹ phẩm</span>
