--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -57,6 +57,7 @@
 
 <script>
     $(document).ready(() => {
+        $('#myModal').modal('show');
         $('.delete-product').on('click', (e) => {
             var r = confirm('Bạn có muốn xóa sản phẩm này không ? ');
             if(r){
