--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,6 +13,7 @@
 
     <!-- Custom fonts for this template-->
     <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
@@ -49,25 +50,25 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
               <a class="nav-link" href="/product">
-                  <i class="fa fa-list"></i>
+                <i class="fas fa-shopping-cart"></i>
                   <span>Quản lý sản phẩm</span></a>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item" >
               <a class="nav-link" href="/user">
-                  <i class="fa fa-list"></i>
+                  <i class="fas fa-user"></i>
                   <span>Quản lý thành viên</span></a>
                 
             </li>
             <li class="nav-item" >
-                <a class="nav-link collapsed" href="/package" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fa fa-list"></i>
                     <span>Quản lý lô nhập</span></a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Sắp hết hạn</h6>
-                        <a class="collapse-item" href="/package/exp-date">Xem chi tiết</a>
+                        <a class="collapse-item" href="/package">Chi tiết lô hàng</a>
+                        <a class="collapse-item" href="/package/exp-date">Lô sắp hết hạn</a>
                         
                     </div>
                 </div>    
@@ -207,8 +208,6 @@
                                 </h6>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_1.svg"
-                                            alt="">
                                         <div class="status-indicator bg-success"></div>
                                     </div>
                                     <div class="font-weight-bold">
@@ -219,8 +218,6 @@
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_2.svg"
-                                            alt="">
                                         <div class="status-indicator"></div>
                                     </div>
                                     <div>
@@ -231,8 +228,6 @@
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
                                     <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_3.svg"
-                                            alt="">
                                         <div class="status-indicator bg-warning"></div>
                                     </div>
                                     <div>
