--- a/src/views/package.ejs
+++ b/src/views/package.ejs
@@ -21,45 +21,40 @@
 <!-- DataTales Example -->
 <div class="card shadow mb-4">
   <div class="card-body">
-    <div class="table-responsive">
-      <table
-        class="table table-bordered"
-        id="dataTable"
-        width="100%"
-        cellspacing="0"
-      >
-        <thead>
-          <tr>
-            <th>Mã lô</th>
-            <th>Mã sản phẩm</th>
-            <th>Ngày nhập</th>
-            <th>Ngày hết hạn</th>
-            <th>Ngày sản xuất</th>
-            <th>Số lượng</th>
-            <th>Giá nhập</th>
-            <th>Hành động</th>
-          </tr>
-        </thead>
-        <tbody>
-          <%if(packageList){%> <%packageList.forEach((package) => {%>
-          <tr>
-            <td><%= package.id%></td>
-            <td><%= package.product_id%></td>
-            <td><%= package.created_at%></td>
-            <td><%= package.mfg_date%></td>
-            <td><%= package.exp_date%></td>
-            <td><%= package.quantity%></td>
-            <td><%= package.price_import%> VNĐ</td>
-            <td>
-              <a class="btn btn-warning m-1" href="#"
-                >Sửa</a
-              >
-            </td>
-          </tr>
-          <%});%> <%}%>
-        </tbody>
-      </table>
-    </div>
+      <div class="table-responsive">
+          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+              <thead>
+                  <tr>
+                    <th>Mã lô</th>
+                    <th>Mã sản phẩm</th>
+                    <th>Ngày nhập</th>
+                    <th>Ngày hết hạn</th>
+                    <th>Ngày sản xuất</th>
+                    <th>Số lượng</th>
+                    <th>Giá nhập</th>
+                    <th>Hành động</th>
+                  </tr>
+              </thead>
+              <tbody>
+                <%if(packageList){%> <%packageList.forEach((package) => {%>
+                  <tr>
+                    <td><%= package.id%></td>
+                    <td><%= package.product_id%></td>
+                    <td><%= package.created_at%></td>
+                    <td><%= package.mfg_date%></td>
+                    <td><%= package.exp_date%></td>
+                    <td><%= package.quantity%></td>
+                    <td><%= package.price_import%> VNĐ</td>
+                    <td>
+                      <a class="btn btn-warning m-1" href="#"
+                        >Sửa</a
+                      >
+                    </td>
+                  </tr>
+                  <%});%> <%}%>
+              </tbody>
+          </table>
+      </div>
   </div>
 </div>
 
