--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -97,6 +97,25 @@
             }
             
         })
+        $('.delete-package').on('click', (e) => {
+            var r = confirm('Bạn có muốn xóa lô hàng này không ? ');
+            if(r){
+                const id = e.target.dataset.id;
+                console.log('id',id)
+                $.ajax({
+                    type: 'DELETE',
+                    url: "/package/delete/" + id,
+                    success: function (response) {
+                        
+                        window.location.reload()
+                    },
+                    error: function (err){
+                        console.log(err)
+                    }
+                })
+            }
+            
+        })
     })
     function addVolume(){
 
