--- a/src/views/addProduct.ejs
+++ b/src/views/addProduct.ejs
@@ -92,6 +92,9 @@
     <a class="btn btn-primary form-control col-5 m-2" onclick="addVolume()">
       Thêm dung tích
     </a>
+    <a class="btn btn-danger form-control col-5 m-2" onclick="removeVolume()">
+      Xóa dung tích
+    </a>
   </div>
   <div class="form-group">
     <label for="img">Example file input</label>
