--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -45,21 +45,21 @@
 </div>
 
 <!-- Bootstrap core JavaScript-->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- Core plugin JavaScript-->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
 <!-- Custom scripts for all pages-->
-<script src="js/sb-admin-2.min.js"></script>
+<script src="/js/sb-admin-2.min.js"></script>
 
 <!-- Page level plugins -->
-<script src="vendor/datatables/jquery.dataTables.min.js"></script>
-<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
 <!-- Page level custom scripts -->
-<script src="js/demo/datatables-demo.js"></script>
+<script src="/js/demo/datatables-demo.js"></script>
 
 
 
@@ -131,10 +131,12 @@
         $('#first-volume .clone-volume').clone().find('input').val("").end().appendTo("#dynamic-volume");
         
     }
+    function removeVolume(){
+        $('#dynamic-volume .clone-volume').last().remove()
+    }
     $('.money').simpleMoneyFormat();
     //search function
     let tableSearch = $('#result-table')
-    tableSearch.hide()
     function searchResult(str){
             console.log(str)
             if(str.length ===0){
