--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -39,6 +39,7 @@
             <th>Danh mục</th>
             <th>Dung tích</th>
             <th>Giá bán</th>
+            <th>Số lượng</th>
             <th>Hành động</th>
           </tr>
         </thead>
@@ -61,6 +62,7 @@
             <td><%=product.category%></td>
             <td><%=product.volume%> <%=product.volume_unit%></td>
             <td><%=product.price%></td>
+            <td><%=product.quantity%></td>
             <td>
               <a
                 class="delete-product btn btn-danger m-1"
