--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -75,6 +75,11 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/customer">
+                  <i class="fas fa-users"></i>
+                    <span>Quản lý khách hàng</span></a>
+              </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="/payment">
