--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -310,6 +310,7 @@
                             <th scope="col">Tên sản phẩm</th>
                             <th scope="col">Dung tích</th>
                             <th scope="col">Đơn vị dung tích</th>
+                            <th scope="col">Giá</th>
                           </tr>
                         </thead>
                         <tbody id="body-table">
