Quan ly doanh thu

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -86,6 +86,11 @@
                   <i class="fas fa-cash-register"></i>
                     <span>Thanh toán</span></a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/report">
+                  <i class="fas fa-cash-register"></i>
+                    <span>Quản lý danh thu</span></a>
+              </li>
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
