--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -66,6 +66,7 @@
  <script type="text/javascript" src="/js/simple.money.format.js"></script>
 <script>
     $(document).ready(() => {
+        
         $('#myModal').modal('show');
         $('.delete-product').on('click', (e) => {
             var r = confirm('Bạn có muốn xóa sản phẩm này không ? ');
@@ -145,7 +146,56 @@
             }
             
         })
+
+        //submit report 
+        $('#report-btn').on('click', (e) =>{
+            e.preventDefault();
+            var dateStart = ($('#date-start').val());
+            var dateEnd = ($('#date-end').val());
+            let data = {dateStart,dateEnd}
+            fetch('/report', {
+                method: 'POST', // or 'PUT'
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(data),
+                })
+                .then(response => response.json(data))
+                .then(result => {
+                    //khi trả về data
+                    if(result.code ===1){
+                        $('#total-price').html(0)
+                        $('#table-report').html(result.message).addClass("text text-danger font-weight-bold")
+                    }
+                    else if(result.code === 2){
+                        var revenue = result.revenue;
+                        var temp = ""
+                        for (let index = 0; index < revenue.length; index++) {
+                            const element = revenue[index];
+                            let string = `<tr>
+                                        <td>${element.transaction_id}</td>
+                                        <td>${element.user_id}</td>
+                                        <td>${element.product_id}</td>
+                                        <td>${element.quantity}</td>
+                                        <td class="money">${element.price}</td>
+                                        <td>${element.created_at}</td>
+                                        </tr>`
+                          temp += string;
+                            
+                        }
+                        $('#total-price').html(result.totalAmount);
+                        $('#table-report').html(temp)
+                    }
+                    
+                })
+                .catch((error) => {
+                    console.error('Error:', error);
+            });
+        })
     })
+    function formatPrice(number){
+        return new Intl.NumberFormat('en-IN',{ style: 'currency', currency: 'VND' }).format(number)
+    }
     function addVolume(){
 
         $('#first-volume .clone-volume').clone().find('input').val("").end().appendTo("#dynamic-volume");
