Xuat file excel doanh thu

--- a/src/views/package.ejs
+++ b/src/views/package.ejs
@@ -49,7 +49,7 @@
             <td><%= package.mfg_date%></td>
             <td><%= package.exp_date%></td>
             <td><%= package.quantity%></td>
-            <td><%= package.price_import%> VNĐ</td>
+            <td class="money"><%= package.price_import%></td>
             <td>
               <a
                   class="delete-package btn btn-danger m-1"
