--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -61,7 +61,7 @@
             <td><%=product.brand%></td>
             <td><%=product.category%></td>
             <td><%=product.volume%> <%=product.volume_unit%></td>
-            <td><%=product.price%></td>
+            <td class="money"><%=product.price%></td>
             <td><%=product.quantity%></td>
             <td>
               <a
