--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -88,7 +88,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/report">
-                  <i class="fas fa-cash-register"></i>
+                    <i class="far fa-money-bill-alt"></i>
                     <span>Quản lý danh thu</span></a>
               </li>
             <!-- Divider -->
